Add security config and enable admin server features
Introduce a new SecurityConfig class to configure security settings, including disabling CSRF and allowing all CORS origins. Enable admin server and caching in the RhSystemApiApplication to enhance application monitoring and performance. Update application properties to expose management endpoints and configure the admin client URL.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=rh-system-api
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+spring.boot.admin.client.url=http://localhost:8080
